--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,11 @@
 #bbcc-toolbar {
-  display: flex;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: space-between;
+    align-items: flex-start;
+
 }
 
 
@@ -10,7 +16,6 @@
     color: #42526e;
     outline: 0;
     cursor: pointer;
-   /* width: 36px;*/
     height: 32px;
     justify-content: center;
     display: flex;
@@ -40,7 +45,8 @@
 
 #bbcc-toolbar ul.checkbox-list {
     list-style: none;
-    display: inline-flex;
+    display: flex;
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
     line-height: 2em;
