--- a/src/popup/style.css
+++ b/src/popup/style.css
@@ -7,23 +7,21 @@ body {
   align-items: center;
 }
 
-
-
 /* Style pour le label */
 .bbcc-popup .bbcc-settings .text-container label {
-    display: block; /* afficher le label en tant que bloc */
-    margin-bottom: 10px; /* ajouter de l'espace en bas du label */
-    font-weight: bold; /* mettre en gras le texte du label */
-    font-size: 16px; /* ajuster la taille du texte du label */
+  display: block; /* afficher le label en tant que bloc */
+  margin-bottom: 10px; /* ajouter de l'espace en bas du label */
+  font-weight: bold; /* mettre en gras le texte du label */
+  font-size: 16px; /* ajuster la taille du texte du label */
 }
 
 /* Style pour le champ d'entrée */
-.bbcc-popup .bbcc-settings .text-container input[type="text"] {
-    display: block; /* afficher le champ d'entrée en tant que bloc */
-    width: 88%; /* remplir la largeur du conteneur parent */
-    padding: 10px; /* ajouter de l'espace autour du texte du champ d'entrée */
-    font-size: 16px; /* ajuster la taille du texte du champ d'entrée */
-    border: 2px solid #ccc; /* ajouter une bordure autour du champ d'entrée */
-    border-radius: 5px; /* arrondir les coins de la bordure */
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1); /* ajouter une ombre à l'intérieur du champ d'entrée */
+.bbcc-popup .bbcc-settings .text-container input[type='text'] {
+  display: block; /* afficher le champ d'entrée en tant que bloc */
+  width: 88%; /* remplir la largeur du conteneur parent */
+  padding: 10px; /* ajouter de l'espace autour du texte du champ d'entrée */
+  font-size: 16px; /* ajuster la taille du texte du champ d'entrée */
+  border: 2px solid #ccc; /* ajouter une bordure autour du champ d'entrée */
+  border-radius: 5px; /* arrondir les coins de la bordure */
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1); /* ajouter une ombre à l'intérieur du champ d'entrée */
 }
